<resources>
    <string name="app_name">DatP RobertM TermProject</string>
    <string name="title_activity_user_home">Home</string>
    <string name="title_activity_signup">Create Account</string>
    <string name="title_activity_edit_ex">Edit Exercise</string>
    <string name="title_activity_find_ex">Find Exercise</string>
    <string name="title_activity_add_ex">Create Exercise</string>
    <string name="title_activity_manage">Manage Account</string>
    <string name="title_no_title"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_signinBtn">Sign in</string>
    <string name="label_email">Enter Email</string>
    <string name="label_password">Enter Password</string>
    <string name="label_signupBtn">Sign up</string>
    <string name="label_traineeRadioBtn">Trainee</string>
    <string name="label_trainerRadioBtn">Trainer</string>
    <string name="label_traineeType">Trainee</string>
    <string name="label_trainerType">Trainer</string>
    <string name="label_emailSignUp">Enter Email</string>
    <string name="label_passwordSignUp">Enter Password</string>
    <string name="label_requirement">Please Fill In All Fields</string>
    <string name="err_signOut">Sign Out Successful!</string>
    <string name="err_signIn">Sign In Successful!</string>
    <string name="err_signInFail">Sign In Failed!</string>
    <string name="label_signOut">Sign Out</string>
    <string name="label_hamburger_find_exercise">Find Exercise</string>
    <string name="label_hamburger_my_exercise">My Exercise</string>
    <string name="label_hamburger_my_trainer">My Trainer</string>
    <string name="label_hamburger_manage_account">Manage Account</string>
    <string name="err_minimum_6_character">Minimum of 6 character for password</string>
    <string name="err_sign_up_successful">Sign Up Success</string>
    <string name="err_sign_up_failed">Sign up Failed %1$s</string>
    <string name="hint_name_of_exercise">Name of exercise</string>
    <string name="hint_trainee_desc">Enter Description</string>
    <string name="label_trainee_find_vid">Find Video</string>
    <string name="label_trainee_add_ex">Add Exercise</string>
    <string name="label_trainee_editBtn">Edit</string>
    <string name="label_filename">File path:</string>
    <string name="label_createAccount">Create Account</string>
    <string name="err_empty_email">Email cannot be empty</string>
    <string name="err_invalid_email">Email Invalid</string>
    <string name="err_empty_password">Password cannot be empty</string>
    <string name="err_exNameEmpty">Exercise name cannot be empty</string>
    <string name="err_newExAdded">New exercise added!</string>
    <string name="label_commentBlock">Enter your comment</string>
    <string name="err_success">Upload Successful</string>
    <string name="label_update">Update Exercise</string>
    <string name="label_deleteBtn">Delete Account</string>
    <string name="label_playBtn">Play Video</string>
    <string name="label_noVideo">No Video</string>
    <string name="err_exUpdated">Exercise Updated!</string>
    <string name="label_delete_ex">Delete Exercise</string>
    <string name="err_deleteExSuccess">Exercise Deleted!</string>
    <string name="label_addCmtBtn"><![CDATA[Add Comment]]></string>
    <string name="err_rated">Rated</string>
    <string name="err_commentAdded">Comment added to database</string>
    <string name="err_commentFailed">Comment failed </string>
    <string name="label_trainer_info">\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="err_delete_warning">Are you sure you want to delete this account PERMANENTLY?</string>
    <string name="label_delete_title">Delete Account</string>
    <string name="err_enter_your_comment">Please Enter a comment</string>
    <string name="err_delete_exercise_title">Delete Exercise</string>
    <string name="err_delete_exercise_warning">Are you sure you want to delete this exercise?</string>
    <string name="err_yes">YES</string>
    <string name="err_cancel">CANCEL</string>
</resources>

