<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserSignUp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_emailSignup"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/label_emailSignUp"
            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_requirement"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/id_passwordSignUp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_emailSignup" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/label_passwordSignUp"
            app:layout_constraintHorizontal_bias="0.509" android:inputType="textPassword"/>
    <RadioGroup
            android:layout_width="218dp"
            android:layout_height="57dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/id_passwordSignUp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/radioGroup2" app:layout_constraintHorizontal_bias="0.513">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/id_traineeSignUpRad" android:layout_weight="1"
                android:text="@string/label_traineeRadioBtn" android:checked="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/id_trainerSignUpRad" android:layout_weight="1"
                android:text="@string/label_trainerRadioBtn"/>
    </RadioGroup>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_signupUserBtn"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/label_signupBtn" android:layout_marginTop="4dp"/>
    <TextView
            android:layout_width="252dp"
            android:layout_height="28dp"
            android:id="@+id/id_requirement" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/label_requirement"
            android:textAlignment="center" android:textSize="18sp" android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>