<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
                <!--android:id="@+id/nav_find_exercise"-->
                <!--android:icon="@drawable/ic_search_exercise_24dp"-->
                <!--android:title="@string/label_hamburger_find_exercise"/>-->
        <!--<item-->
                <!--android:id="@+id/nav_my_exercise"-->
                <!--android:icon="@drawable/ic_my_exercise"-->
                <!--android:title="@string/label_hamburger_my_exercise"/>-->
        <item
                android:id="@+id/nav_my_trainer"
                android:icon="@drawable/ic_my_trainer"
                android:title="@string/label_hamburger_my_trainer"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_manage_account"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/label_hamburger_manage_account"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@android:drawable/ic_menu_close_clear_cancel"
                    android:title="@string/label_signOut"/>
        </menu>
    </item>

</menu>
