<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTraineeExercise">

    <EditText
            android:layout_width="294dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_trainee_ex_title" android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/hint_name_of_exercise"/>
    <EditText
            android:layout_width="326dp"
            android:layout_height="245dp"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/id_trainee_ex_desc" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_trainee_ex_title" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/hint_trainee_desc"/>
    <Button
            android:text="@string/label_trainee_find_vid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_trainee_find_vidBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_trainee_ex_desc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/label_trainee_add_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_trainee_add_exBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_trainee_find_vidBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="445dp"
            tools:layout_editor_absoluteX="144dp" android:id="@+id/id_videoUrl"/>
</android.support.constraint.ConstraintLayout>