<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gradient"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textPersonName"
            android:ems="10"
            android:id="@+id/id_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/label_email" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/id_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_email" android:hint="@string/label_password"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:inputType="textPassword"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_signinBtn"
            android:text="@string/label_signinBtn"
            android:theme="@style/NormalButton"
            android:shadowRadius= "50"
            android:shadowColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="6dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/id_password"/>
    <Button
            android:layout_width="104dp"
            android:layout_height="49dp"
            android:textColor="@color/white"
            android:id="@+id/id_signupBtn"
            android:shadowRadius= "50"
            android:shadowColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/id_signinBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/label_signupBtn"
            android:theme="@style/ButtonGray" android:layout_marginTop="280dp"
            app:layout_constraintHorizontal_bias="0.919" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_signinBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.116"/>

</android.support.constraint.ConstraintLayout>